@@ -1,1 +1,1 @@
-<?php return array('dependencies' => array('wp-hooks', 'wp-i18n'), 'version' => '8e5a56976d5c8065575f');
+<?php return array('dependencies' => array('wp-hooks', 'wp-i18n'), 'version' => 'c347e24f1e30f925613f');
